--- a/css/main.css
+++ b/css/main.css
@@ -2906,7 +2906,7 @@ header.header {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #b8ebcd;
+  background: #fb9dff;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
