--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -63,3 +63,15 @@ pre,
 .highlight .code pre {
   background: rgba(29, 31, 100, 0);
 }
+
+// 修改鼠标选中字符的颜色
+/* webkit, opera, IE9 */
+::selection {
+    background: #DfA710;
+    color: #f7f7f7;
+}
+/* firefox */
+::-moz-selection {
+    background: #DfA710;
+    color: #f7f7f7;
+}
