[Up] 更新配置 JiaHaoFang/JiaHaoFang.github.io@2bffec06efebe1d11cea5541c397b6e73a1ab851

--- a/css/main.css
+++ b/css/main.css
@@ -2920,7 +2920,7 @@ header.header {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #62097d;
+  background: #fffb13;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
