[Up]修改 mermaid背景色

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -49,3 +49,9 @@ code {
     background: #DfA710;
     color: #f7f7f7;
 }
+
+/* 修改Mermaid渲染样式-修改背景色为透明 */
+.article-entry pre,
+.mermaid {
+  background:rgb(160, 160, 160);
+}
