[Up]修改 mermaid背景色

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -11,7 +11,7 @@
 }
 // 图片圆角
 .post-body img {
-  border-radius: 0.5em 
+  border-radius: 1em 
 }
 // 将链接文本设置为蓝色，鼠标划过时文字颜色加深，并显示下划线。
 .post-body p a {
@@ -50,8 +50,9 @@ code {
     color: #f7f7f7;
 }
 
-/* 修改Mermaid渲染样式-修改背景色为透明 */
+/* 修改Mermaid背景色 */
 .article-entry pre,
 .mermaid {
-  background:rgb(160, 160, 160);
+  background: #f7f7f7;
+  border-radius: 1em;
 }
