--- a/css/main.css
+++ b/css/main.css
@@ -2982,7 +2982,7 @@ header.header {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #1daf88;
+  background: #b401b4;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
@@ -3042,7 +3042,7 @@ header.header {
   word-break: break-all;
 }
 .post-body img {
-  border-radius: 0.5em;
+  border-radius: 1em;
 }
 .post-body p a {
   color: #0593d3;
@@ -3075,8 +3075,9 @@ code {
   background: #dfa710;
   color: #f7f7f7;
 }
-/* 修改Mermaid渲染样式-修改背景色为透明 */
+/* 修改Mermaid背景色 */
 .article-entry pre,
 .mermaid {
-  background: #a0a0a0;
+  background: #f7f7f7;
+  border-radius: 1em;
 }
