[Up]修改 mermaid背景色

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -11,7 +11,7 @@
 }
 // 图片圆角
 .post-body img {
-  border-radius: 1em 
+  border-radius: 0.5em 
 }
 // 将链接文本设置为蓝色，鼠标划过时文字颜色加深，并显示下划线。
 .post-body p a {
@@ -53,6 +53,6 @@ code {
 /* 修改Mermaid背景色 */
 .article-entry pre,
 .mermaid {
-  background: #f7f7f7;
-  border-radius: 1em;
+  background: #ffffff;
+  border-radius: 3px;
 }
