deploy: JiaHaoFang/JiaHaoFang.github.io@423e233ab341095e6d92d48abe9b9b0a90167a24

--- a/css/main.css
+++ b/css/main.css
@@ -2982,7 +2982,7 @@ header.header {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #854eff;
+  background: #61ff17;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
