--- a/css/main.css
+++ b/css/main.css
@@ -2982,7 +2982,7 @@ header.header {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #61ff17;
+  background: #406ca6;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
